--- a/setup.cfg
+++ b/setup.cfg
@@ -1,13 +1,13 @@
 [metadata]
-name = pyfoobar
-version = 0.0.6
-author = Nico Schlömer
-author_email = nico.schloemer@gmail.com
-description = Best practices for Python projects
-url = https://github.com/nschloe/pyfoobar
+name = torch-dist
+version = 0.0.1
+author = Ammar Alsherfawi
+author_email = ammar.sherfawi@gmail.com
+description = Flops/Mem Optimized distance functions in pytorch 
+url = https://github.com/jasam-sheja/torch-dist
 project_urls =
-    Code=https://github.com/nschloe/pyfoobar
-    Issues=https://github.com/nschloe/pyfoobar/issues
+    Code=https://github.com/jasam-sheja/torch-dist
+    Issues=https://github.com/jasam-sheja/torch-dist/issues
     # "Documentation": "https://packaging.python.org/tutorials/distributing-packages/",
     # "Funding": "https://donate.pypi.org",
     # "Say Thanks!": "http://saythanks.io/to/example",
@@ -36,11 +36,9 @@ package_dir =
 packages = find:
 install_requires =
     importlib_metadata;python_version<"3.8"
+    torch
 python_requires = >=3.6
 
 [options.packages.find]
 where=src
 
-[options.entry_points]
-console_scripts =
-    pyfoobar-show = pyfoobar.cli:show
